# racebot

./: .gitignore  README.md  alembic.ini  bot.db  bot.py  main.py  migrations.py  pyproject.toml  required_permissions.md  requirements.txt
alembic/: env.py
alembic/versions/: bf5d7732bda2_initial_migration.py  d4879f0c43b3_initial_migration.py
racebot/: migrations.py
racebot/api/crud/: team.py
racebot/api/routers/: drivers.py  servers.py  teams.py
racebot/api/schemas/: driver.py  team.py
racebot/api/utils/: discord.py
racebot/bot/: bot.py
racebot/bot/events/: __init__.py  bot_lifecycle.py  guild_events.py
racebot/db/: db.py
racebot/models/: __init__.py  base.py  driver.py  race.py  race_result.py  server.py  team.py  tier.py
